--- a/presentations/thesis_workshop.qmd
+++ b/presentations/thesis_workshop.qmd
@@ -29,6 +29,8 @@ load("../data/processed/newEJI_wpfasrank_1e_output_2023-04-04.RData")
 
 load("../data/processed/sa_files.RData")
 
+theme_set(theme_bw())
+
 density_plot <- function(ggobj, bin_num = 30){
   ggobj + 
     geom_histogram(aes(y = after_stat(density)),
@@ -36,6 +38,13 @@ density_plot <- function(ggobj, bin_num = 30){
                    fill = "white",
                    bins = bin_num) +
     geom_density(fill = "red", alpha = 0.25)
+}
+
+sina_boxplot <- function(ggobj){
+    ggobj + 
+    ggforce::geom_sina(alpha = 0.5, color = "lightgrey", show.legend = TRUE) +
+    geom_boxplot(width = 0.1, guides = FALSE, outlier.shape = NA, 
+                 size = 1, color = "#3a3838", alpha = 0.5) 
 }
 
 ```
@@ -354,26 +363,6 @@ tmap_leaflet(ppps_sa_percentilerank_tm) %>%
 
 
 
-## PFAS burden estimation: Distribution {.smaller}
-
-```{r}
-
-percentilerank_pfas <- percentilerank_pfas %>%
-  mutate(perc_area_pfas_0 = perc_area_pfas_0*100)
-
-perc_area_pfas_density <- ggplot(percentilerank_pfas, aes(x =  perc_area_pfas_0)) %>% 
-  density_plot() + 
-  xlab("% of census tract within\n1-mile of a PFAS source") + 
-  theme_bw()
-
-perc_rank_pfas_density <- ggplot(percentilerank_pfas, aes(x =  percent_rank_pfas)) %>% 
-  density_plot() + 
-  xlab("Percentile rank of proportion of census tract\nwithin 1-mile buffer of a PFAS source") + 
-  theme_bw()
-
-cowplot::plot_grid(perc_area_pfas_density, perc_rank_pfas_density)
-
-```
 
 
 
@@ -381,22 +370,41 @@ cowplot::plot_grid(perc_area_pfas_density, perc_rank_pfas_density)
 
 ![](images/REVISED2_percent_area_pfas_0_map_2023-04-11.png){fig-align="center" height="40%"}
 
-## EJI 
+
+## PFAS burden estimation: Distribution {.smaller}
+
+```{r}
+
+load("../data/processed/pfas_mod_formatting.RData")
+
+perc_area_pfas_density <- ggplot(pfas_mod_data_format, aes(x =  `% of census tract within 1-mile of a PFAS source`)) %>% 
+  density_plot() + 
+  xlab("% of census tract within\n1-mile of a PFAS source") + 
+  theme_bw()
+
+perc_rank_pfas_density <- ggplot(pfas_mod_data_format, aes(x =  `Percentile rank of proportion of census tract within 1-mile of a PFAS source`)) %>% 
+  density_plot() + 
+  xlab("Percentile rank of proportion of census tract\nwithin 1-mile of a PFAS source") + 
+  theme_bw()
+
+cowplot::plot_grid(perc_area_pfas_density, perc_rank_pfas_density)
+
+```
 
 
 ## Table 2
 
 ```{r}
 
-load("../data/processed/pfas_mod_formatting.RData")
+
 
 table1a <- tbl_summary(pfas_mod_data_format,
-            include = c("% of census tract within a 1-mile buffer of a PFAS source", 
+            include = c("% of census tract within 1-mile of a PFAS source", 
                         "Sum of the HVM, EBM, and SVM module percentile ranks", 
                         "Sum of the EBM variable percentile ranks", 
                         "Sum of the SVM variable percentile ranks",
                         "Total number of HVM tertile flags"),
-            type = list(c("% of census tract within a 1-mile buffer of a PFAS source", 
+            type = list(c("% of census tract within 1-mile of a PFAS source", 
                           "Sum of the HVM, EBM, and SVM module percentile ranks", 
                           "Sum of the EBM variable percentile ranks", 
                           "Sum of the SVM variable percentile ranks",
@@ -424,54 +432,70 @@ tbl_merge(list(table1a, table1b),
 
 ```
 
-
-<!--
-
-## Table 2a
+## Distribution of % of census tract within 1-mile of a PFAS source by quartiles of EJI modules
 
 ```{r}
-load("../data/processed/pfas_mod_formatting.RData")
+perc_area_pfas_by_SVMquart_plot <- ggplot(pfas_mod_data_format, aes(y = `% of census tract within 1-mile of a PFAS source`, x = SVM_quartile)) %>% 
+  sina_boxplot() + 
+  xlab("Quartile of SVM") + 
+  ylab("% of census tract within\n1-mile of a PFAS source")
 
-tbl_summary(pfas_mod_data_format,
-            include = c("% of census tract within a 1-mile buffer of a PFAS source", 
-                        "Sum of the HVM, EBM, and SVM module percentile ranks", 
-                        "Sum of the EBM variable percentile ranks", 
-                        "Sum of the SVM variable percentile ranks",
-                        "Total number of HVM tertile flags"),
-            type = list(c("% of census tract within a 1-mile buffer of a PFAS source", 
-                          "Sum of the HVM, EBM, and SVM module percentile ranks", 
-                          "Sum of the EBM variable percentile ranks", 
-                          "Sum of the SVM variable percentile ranks",
-                          "Total number of HVM tertile flags") ~ 'continuous2'),
-            statistic = list(all_continuous() ~ c("{median} ({p25} - {p75})", 
-                                                  "{mean} ({sd})"))) 
+perc_area_pfas_by_EBMquart_plot <- ggplot(pfas_mod_data_format, aes(y = `% of census tract within 1-mile of a PFAS source`, x = EBM_quartile)) %>% 
+  sina_boxplot() + 
+  xlab("Quartile of EBM") + 
+  ylab("% of census tract within\n1-mile of a PFAS source")
 
+
+perc_area_pfas_by_HVMflag_plot <- ggplot(pfas_mod_data_format, aes(y = `% of census tract within 1-mile of a PFAS source`, x = as.factor(F_HVM))) %>% 
+  sina_boxplot() + 
+  xlab("# of flags indicating a high estimated prevalence of disease") + 
+  ylab("% of census tract within\n1-mile of a PFAS source")
+
+perc_area_pfas_by_EJIquart_plot <- ggplot(pfas_mod_data_format, aes(y = `% of census tract within 1-mile of a PFAS source`, x = EJI_quartile)) %>% 
+  sina_boxplot() + 
+  xlab("Quartile of EJI") + 
+  ylab("% of census tract within\n1-mile of a PFAS source")
+
+cowplot::plot_grid(perc_area_pfas_by_EBMquart_plot, perc_area_pfas_by_SVMquart_plot, 
+                   perc_area_pfas_by_HVMflag_plot, perc_area_pfas_by_EJIquart_plot)
+```
+
+## Correlation between PFAS sources and EBM variables  {.scrollable}
+
+```{r}
+#| fig-asp: 1
+
+load("../output/figures/cor_plots.RData")
+
+cor_plot[[2]] %>% 
+  plotly::ggplotly()
+
+```
+## Correlation between PFAS sources and SVM variables {.scrollable}
+
+```{r}
+#| fig-asp: 1
+
+cor_plot[[3]]%>% 
+  plotly::ggplotly()
+
+```
+
+## Correlation between PFAS sources and HVM variables {.scrollable}
+
+```{r}
+#| fig-asp: 1
+
+cor_plot[[4]]%>% 
+  plotly::ggplotly()
 
 ```
 
 
-## Table 2b 
+## Table 3: Univariate logistic regression
 
-```{r}
-tbl_summary(pfas_mod_data_format, 
-                       by = c("Number of PFAS point sources"), 
-                       include = c("Sum of the HVM, EBM, and SVM module percentile ranks", 
-                                   "Sum of the EBM variable percentile ranks", 
-                                   "Sum of the SVM variable percentile ranks",
-                                   "Total number of HVM tertile flags"),
-                       type = list(c("Sum of the HVM, EBM, and SVM module percentile ranks", 
-                                     "Sum of the EBM variable percentile ranks", 
-                                     "Sum of the SVM variable percentile ranks",
-                                     "Total number of HVM tertile flags") ~ 'continuous2'),
-                       statistic = list(all_continuous() ~ c("{median} ({p25} - {p75})", 
-                                                             "{mean} ({sd})"))) %>% 
-  add_p()
-
-```
-
--->
-
-## Table 3: Univariate regression {.smaller}
+<br>
+Crude logistic regression models evaluating associations between presence of a PFAS point source/contamination site (Y/N) and EJI modules.
 
 ```{r}
 pfas_mod_data_format %>% 
@@ -485,7 +509,9 @@ pfas_mod_data_format %>%
 
 ```
 
-## Table 4 {.smaller}
+## Table 4: Multivariate logistic regression {.smaller}
+
+Adjusted logistic regression models evaluating associations between presence of a PFAS point source/contamination site (Y/N) and EJI modules.
 
 ```{r}
 #multivariate regression
@@ -500,30 +526,37 @@ gtsummary::tbl_regression(mod3, exponentiate = TRUE)
 
 ## Recalculating the EJI 
 
+<br>
+What's the additional burden of PFAS to communities?
 
-
-## Table 5 {.smaller}
+## Additional burden of PFAS 
 
 ```{r}
+new_old_RPLEBM_xy <- pfas_mod_data_format %>%
+  ggplot(aes(x = new_RPL_EBM, y = RPL_EBM, color = `% of census tract within 1-mile of a PFAS source`)) +
+  geom_point(alpha = 0.5) +
+  scale_color_continuous(low = "pink", high = "palevioletred", na.value = "snow2") + 
+  geom_abline(slope = 1, color = "red") + 
+  theme(legend.position = "none")
 
-tbl_summary(pfas_mod_data_format,
-                       include = c("Percentile rank of proportion of census tract within 1-mile buffer of a PFAS source",
-                                   "Sum of the HVM, EBM, and SVM module percentile ranks after accounting for PFAS sources", 
-                                   "Sum of the EBM variable percentile ranks after accounting for PFAS sources", 
-                                   "Change in EJI sum",
-                                   "Change in EBM sum",
-                                   "Change in EBM rank"),
-                       type = list(c("Percentile rank of proportion of census tract within 1-mile buffer of a PFAS source",
-                                     "Sum of the HVM, EBM, and SVM module percentile ranks after accounting for PFAS sources", 
-                                     "Sum of the EBM variable percentile ranks after accounting for PFAS sources", 
-                                     "Change in EJI sum",
-                                     "Change in EBM sum",
-                                     "Change in EBM rank") ~ 'continuous2'),
-                       statistic = list(all_continuous() ~ c("{median} ({p25} - {p75})", 
-                                                             "{mean} ({sd})"))) 
+new_old_RPLEJI_xy <- pfas_mod_data_format %>%
+  # filter(percent_rank_pfas_0 != 0) %>%
+  ggplot(aes(x = new_RPL_EJI, y = RPL_EJI, color = `% of census tract within 1-mile of a PFAS source`)) +
+  geom_point() +
+  scale_color_continuous(name = "% of census tract within\n1-mile of a PFAS source", 
+                         low = "pink", high = "palevioletred", na.value = "snow2") + 
+  geom_abline(slope = 1, color = "red")
 
+
+cowplot::plot_grid(new_old_RPLEBM_xy, new_old_RPLEJI_xy)
 
 ```
 
+
+<!--
+## Table 5 {.smaller}
+
+
+-->
 
 <!-- ## EAT MY FARTS KATE --> 
